fix: horizontal scroll

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,3 +1,7 @@
+@media (max-width:1300px)
+    .theme 
+        &__container 
+            width: 95%
 @media (max-width:1200px)
     .container 
         max-width: 980px
@@ -71,9 +75,9 @@
             margin: auto
         &__button 
             &-next 
-                right: -5px
+                right: 10px
             &-prev
-                left: -5px
+                left: 10px
     .unpublished 
         &-swiper
             &__slide
@@ -98,7 +102,7 @@
                 width: 230px
 @media (max-width:991px)
     .container 
-        max-width: 760px
+        max-width: 740px
     .header 
         &-wrapper 
             flex-basis: 50%
@@ -146,7 +150,7 @@
             &__poster 
                 height: 141px
         &-container 
-            width: 760px
+            width: 745px
         &-wide 
             height: 290px
     .theme 
@@ -235,7 +239,7 @@
     body
         padding-top: 64px
     .container 
-        max-width: 560px
+        max-width: 540px
     .header 
         padding: 20px 0 20px 0
         position: fixed
@@ -350,8 +354,6 @@
             &:last-child
                 margin-bottom: 34px
     .story 
-        &-container 
-            width: 560px
         &__description 
             max-width: 100%
             flex-basis: 100% 
@@ -549,7 +551,7 @@
                 height: 50px
 @media (max-width:560px)
     .container 
-        max-width: 320px
+        max-width: 310px
     .book 
         padding: 36px 0 56px 0
         &-cover 
@@ -586,8 +588,6 @@
             width: 100%
     .story 
         padding: 44px 0 38px 0
-        &-container 
-            width: 320px
         &__title 
             font-size: 28px
             line-height: 36px
